--- a/Makefile.win
+++ b/Makefile.win
@@ -1,15 +1,15 @@
-# Project: bingo2
+# Project: bingo
 # Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = bingoo.o
-LINKOBJ  = bingoo.o
+OBJ      = "../../../Users/shszy/OneDrive/πŸ≈¡\ »≠∏È/code/Untitled1.o"
+LINKOBJ  = "../../../Users/shszy/OneDrive/πŸ≈¡ »≠∏È/code/Untitled1.o"
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = bingo2.exe
+BIN      = bingo.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
 RM       = rm.exe -f
@@ -24,5 +24,5 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CC) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-bingoo.o: bingoo.c
-	$(CC) -c bingoo.c -o bingoo.o $(CFLAGS)
+"../../../Users/shszy/OneDrive/πŸ≈¡\ »≠∏È/code/Untitled1.o": ../../../Users/shszy/OneDrive/πŸ≈¡\ »≠∏È/code/Untitled1.c
+	$(CC) -c "../../../Users/shszy/OneDrive/πŸ≈¡ »≠∏È/code/Untitled1.c" -o "../../../Users/shszy/OneDrive/πŸ≈¡ »≠∏È/code/Untitled1.o" $(CFLAGS)
